fix image size only on small screen
fix profile image size only on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,14 +6,14 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-img.profile-icon {
+/* img.profile-icon {
     display: flex;
     justify-content: center;
     width: 550px;
     align-content: center;
     margin-right: auto;
     margin-left: auto;
-}
+} */
 @media screen and (max-width: 565px) {
 	img.profile-icon {
 		display: flex;
